
* Type "rat" of the rational numbers is now available in HOL-Complex.

* Records:
  - Record types are now by default printed with their type abbreviation
    instead of the list of all field types. This can be configured via
    the reference "print_record_type_abbr".
  - Simproc "record_upd_simproc" for simplification of multiple updates added 
    (not enabled by default).
  - Tactic "record_split_simp_tac" to split and simplify records added.
 
* 'specification' command added, allowing for definition by
  specification.  There is also an 'ax_specification' command that
  introduces the new constants axiomatically.

* arith(_tac) is now able to generate counterexamples for reals as well.

* HOL-Algebra: new locale "ring" for non-commutative rings.

* HOL-ex: InductiveInvariant_examples illustrates advanced recursive function
 defintions, thanks to Sava Krsti\'{c} and John Matthews.

* Unions and Intersections:
  The x-symbol output syntax of UN and INT has been changed
  from "\<Union>x \<in> A. B" to "\<Union\<^bsub>x \<in> A\<^esub> B"
  i.e. the index formulae has become a subscript, like in normal math.
  Similarly for "\<Union>x. B", and for \<Inter> instead of \<Union>.
  The subscript version is also accepted as input syntax.

* Unions and Intersections over Intervals:
  There is new short syntax "UN i<=n. A" for "UN i:{0..n}. A". There is 
  also an x-symbol version with subscripts "\<Union>\<^bsub>i <= n\<^esub>. A" 
  like in normal math, and corresponding versions for < and for intersection.

* ML: the legacy theory structures Int and List have been removed. They had
  conflicted with ML Basis Library structures having the same names.

New in Isabelle2003 (May 2003)
--------------------------------

*** General ***

* Provers/simplifier:

  - Completely reimplemented method simp (ML: Asm_full_simp_tac):
    Assumptions are now subject to complete mutual simplification,
    not just from left to right. The simplifier now preserves